# Learn-Rust-in-a-Month-of-Lunches

./: README.md
code/ch01/chars/src/: main.rs
code/ch01/my_name/: Cargo.toml
code/ch02/const_static/: Cargo.toml
code/ch02/copy_types/: Cargo.toml
code/ch02/give_ref_to_function/: Cargo.toml
code/ch02/more_printing/: Cargo.toml
code/ch02/mut_references/: Cargo.toml
code/ch02/shadowing_again/: Cargo.toml
code/ch02/variables_without_vales/: Cargo.toml
code/ch03/array01/: Cargo.toml
code/ch03/control_flow/: Cargo.toml
code/ch04/desctructuring/: Cargo.toml
code/ch06/parse_int_error/: Cargo.toml
code/ch07/asref/: Cargo.toml
code/ch07/from_trait/: Cargo.toml
code/ch09/debug_macro/: Cargo.toml
code/ch09/methods2/: Cargo.toml
code/ch10/liftimers/: Cargo.toml
code/ch11/cow_intro/: Cargo.toml
code/ch11/importing/: Cargo.toml
code/ch11/multiple_threads/: Cargo.toml
code/ch11/rc_using/: Cargo.toml
code/ch11/todos/: Cargo.toml
code/ch12/train_generics/: Cargo.toml
code/ch13/assert_eq/: Cargo.toml
code/ch13/box_project/: Cargo.toml
code/ch14/subtractor/: Cargo.toml
code/ch15/make_default/: Cargo.toml
code/ch16/read_file/: Cargo.toml
code/ch16/using_rand/: Cargo.toml
code/ch17/chrono_examples/: Cargo.toml
code/ch17/errors_examples/: Cargo.toml
code/ch17/rayon_examples/: Cargo.toml
code/ch17/serde_doc_examples/: Cargo.toml  README.md
code/ch17/serde_example/: Cargo.toml
code/ch18/input_examples/: Cargo.toml
code/ch19/request_features/: Cargo.toml
code/ch19/request_features/src/: main.rs
(+68 files in other folders)
