[package]
name = "request_features"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest= {version="0.12.3", features = ["blocking"]}
tokio = {version="1.37.0", features = ["macros", "rt-multi-thread"]}
